Oops, leave Makefile.am in a state where OSSS-UCX will actually build

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -12,9 +12,7 @@ LIBSHMEMC_SOURCES         = \
 				locks.c \
 				readenv.c \
 				shmemc-init.c \
-				state.c \
-				ucx-pmi1-client.c
-
+				state.c
 #
 # -- begin: UCX sources --
 #
