Comment out PMI configure choice

--- a/configure.ac
+++ b/configure.ac
@@ -67,7 +67,7 @@ AM_PROG_CC_C_O
 # for building shared libraries
 LT_INIT
 
-m4_include([config/m4/pmi.m4])
+# m4_include([config/m4/pmi.m4])
 m4_include([config/m4/pmix.m4])
 m4_include([config/m4/ucx.m4])
 m4_include([config/m4/shcoll.m4])
