Move internal psyncs to shmemc, to make sure they're set up correctly.
Barrier at init to ensure all symmetric memory ready

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -39,6 +39,10 @@ MY_SOURCES             = \
 #
 MY_SOURCES            += collectives/shcoll-shim.c
 
+# TEMP TEMP TEMP TEMP
+MY_SOURCES            += collectives/reductions.c
+# TEMP TEMP TEMP TEMP
+
 all_cppflags          += -I$(SHCOLL_DIR)/include
 #
 # -- end: SHCOLL --
