Tell automake to use PAX format when making dist tarballs (old GNU format doesn't like 64-bit UIDs)

--- a/configure.ac
+++ b/configure.ac
@@ -51,7 +51,7 @@ AC_CONFIG_SRCDIR([autogen.sh])
 AC_CONFIG_HEADERS([config.h])
 # AC_CONFIG_MACRO_DIRS([m4])
 AC_CONFIG_MACRO_DIR([m4])
-AM_INIT_AUTOMAKE([subdir-objects])
+AM_INIT_AUTOMAKE([subdir-objects tar-pax])
 
 AM_SILENT_RULES([yes])
 
