Some fixups to put the put/get + signal in its own CU

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -48,6 +48,10 @@ if ENABLE_THREADS
 MY_SOURCES            += shmem_mutex.c
 endif # threads
 
+if ENABLE_EXPERIMENTAL
+MY_SOURCES            += putget-signal.c
+endif # experimental
+
 #
 # separate out the memory allocation routines
 #
