--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -17,23 +17,8 @@ SHMEM_HDRS             += mpp/shmem.h mpp/shmemx.h
 #
 if ENABLE_FORTRAN
 SHMEM_HDRS             += shmem/defs.fh shmem.fh
-SHMEM_HDRS             += mpp/shmem.fh mpp/shmemx.fh
+SHMEM_HDRS             += mpp/shmem.fh
 endif # fortran
-
-#
-# extensions, maybe for fortran too
-#
-if ENABLE_EXPERIMENTAL
-
-if ENABLE_PSHMEM
-SHMEM_HDRS             += pshmemx.h
-endif # pshmem
-
-if ENABLE_FORTRAN
-SHMEM_HDRS             += pshmemx.fh
-endif # fortran
-
-endif # experimental
 
 #
 # add profiling interface if requested
@@ -49,14 +34,12 @@ endif # pshmem
 
 #
 # need presence of *a* shmemx header file whether features requested
-# or not.  Also add fortran one if enabled.
+# or not.
 #
 if ENABLE_EXPERIMENTAL
 SHMEMX_HEADER_C         = shmemx.h
-SHMEMX_HEADER_F         = shmemx.fh
 else
 SHMEMX_HEADER_C         = null-shmemx.h
-SHMEMX_HEADER_F         = null-shmemx.fh
 endif # experimental
 
 # retain tree
@@ -66,7 +49,6 @@ nobase_include_HEADERS  = $(SHMEM_HDRS)
 
 install-data-hook:
 	$(INSTALL_DATA) $(srcdir)/$(SHMEMX_HEADER_C) $(includedir)/shmemx.h
-	$(INSTALL_DATA) $(srcdir)/$(SHMEMX_HEADER_F) $(includedir)/shmemx.fh
 
 uninstall-local:
-	$(RM) $(includedir)/shmemx.h $(includedir)/shmemx.fh
+	$(RM) $(includedir)/shmemx.h
