Bunch of progress thread support changes:
update doc
rename thread wrapper API (getting confused with API mutex)
parse environment variable for PE#s to run only specific progress threads (or "all")
no way to auto-detect UCX's use of emulation at the moment

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,6 +23,7 @@ MY_SOURCES             = \
 				info.c \
                                 init.c \
                                 lock.c \
+				progress.c \
                                 ptr.c \
                                 putget.c \
                                 quiet.c \
