--- a/src/osh_info/Makefile.am
+++ b/src/osh_info/Makefile.am
@@ -1,8 +1,8 @@
 # For license: see LICENSE file at top-level
 
 # yes, I really do want to override here
-CFLAGS=
-LDFLAGS=
+AM_CFLAGS=
+AM_LDFLAGS=
 
 bin_PROGRAMS           = osh_info
 
