--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -15,6 +15,7 @@ LIBSHMEMC_SOURCES         = \
 LIBSHMEMC_SOURCES        += \
 				ucx/comms.c \
 				ucx/contexts.c \
+				ucx/emulation.c \
 				ucx/init.c \
 				ucx/waituntil.c
 
