Split out contexts and endpoints code, looking to make it easier to improve context handling

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -15,6 +15,7 @@ LIBSHMEMC_SOURCES         = \
 LIBSHMEMC_SOURCES        += \
 				ucx/comms.c \
 				ucx/contexts.c \
+				ucx/eps.c \
 				ucx/init.c \
 				ucx/waituntil.c
 
