Added test_any as experimental feature (with naive impl).  test_all and test_some to come

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -98,6 +98,7 @@ if ENABLE_EXPERIMENTAL
 MY_SOURCES            += \
 			extensions/putget_signal.c \
 			extensions/shmalloc.c \
+			extensions/testany.c \
 			extensions/wtime.c \
 			extensions/interop.c
 
