--- a/pkgconfig/osss-ucx.pc.in
+++ b/pkgconfig/osss-ucx.pc.in
@@ -8,7 +8,7 @@ URL: @PACKAGE_URL@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 #
-Libs: -Wl,-rpath,@libdir@ -L@libdir@ -lshmem -lshmemc-ucx -lshmemu @SHCOLL_LIBS@ @PMIX_LIBS@ @UCX_LIBS@ -lm
+Libs: -Wl,-rpath,@libdir@ -L@libdir@ -lshmem -lshmemc-ucx -lshmemu -lshmemt @SHCOLL_LIBS@ @PMIX_LIBS@ @UCX_LIBS@ -lm
 Cflags: -I@includedir@
 #
 Provides: @PACKAGE@
