--- a/src/shmemc/osh_common.in
+++ b/src/shmemc/osh_common.in
@@ -23,7 +23,7 @@ shmem_lib="@libdir@"
 pmixlib_stanza="@PMIX_LIBS@"
 
 shmemlib_ldflags="-L$shmem_lib -Wl,-rpath -Wl,$shmem_lib"
-shmemlib_libs="-lshmem -lshmemc-ucx -lshmemu -lm"
+shmemlib_libs="-lshmem -lshmemc-ucx -lshmemu -lshmemt -lm"
 shmemlib_stanza="$shmemlib_ldflags $shmemlib_libs $pmixlib_stanza"
 
 #
