Fix library install
Looks like autoconf seems to work out what to do with static/shared
libraries without help.  So comment out the _a_ rules, this appears to
fix libraries being installed when they're supposed to be disabled.

--- a/src/collectives/shcoll/src/Makefile.am
+++ b/src/collectives/shcoll/src/Makefile.am
@@ -21,9 +21,9 @@ lib_LTLIBRARIES         = libshcoll.la
 libshcoll_la_SOURCES    = $(SOURCES)
 libshcoll_la_CFLAGS     = $(BUILD_CFLAGS)
 
-lib_LIBRARIES           = libshcoll.a
-libshcoll_a_SOURCES     = $(SOURCES)
-libshcoll_a_CFLAGS      = $(BUILD_CFLAGS)
+# lib_LIBRARIES           = libshcoll.a
+# libshcoll_a_SOURCES     = $(SOURCES)
+# libshcoll_a_CFLAGS      = $(BUILD_CFLAGS)
 
 nobase_include_HEADERS  = shcoll.h \
 				shcoll/alltoall.h \
