--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -129,7 +129,7 @@ libshmem_la_CPPFLAGS   = $(all_cppflags)
 libshmem_la_LDFLAGS    = -version-info 0:0:0
 libshmem_la_LIBADD     = liballocator.la
 
-lib_LIBRARIES          = libshmem.a
-libshmem_a_SOURCES     = $(LIBSHMEM_SOURCES)
-libshmem_a_CPPFLAGS    = $(all_cppflags)
-libshmem_a_LIBADD      = liballocator.a
+# lib_LIBRARIES          = libshmem.a
+# libshmem_a_SOURCES     = $(LIBSHMEM_SOURCES)
+# libshmem_a_CPPFLAGS    = $(all_cppflags)
+# libshmem_a_LIBADD      = liballocator.a
