--- a/man/man1/oshrun.1.in
+++ b/man/man1/oshrun.1.in
@@ -84,8 +84,9 @@ configure.
 .RS 4
 .IP "SHMEM_PROGRESS_THREADS (default: unset)"
 If we need extra progress for transports that don't provide it,
-activate progress threads on "all" PEs, or on named ones, e.g. "0",
-"1-3", "2,4,6".
+activate progress threads on the named PEs, e.g. "0", "1-3", "2,4,6";
+or on all PEs if the variable's (case-insensitive) value is "y[es]" or
+"a[ll]".
 .RE
 .\"
 .RE
