Suppress warnings from internal shcoll build

--- a/src/collectives/shcoll/src/Makefile.am
+++ b/src/collectives/shcoll/src/Makefile.am
@@ -15,7 +15,9 @@ SOURCES                += util/bithacks.c \
 
 FIND_SHMEM_H            = -I$(top_srcdir)/include -I../../../../include
 
-BUILD_CFLAGS            = $(AM_CFLAGS) -I.. $(FIND_SHMEM_H)
+# disable warnings here (should detect how to do this)
+BUILD_CFLAGS            = -w
+BUILD_CFLAGS           += -I.. $(FIND_SHMEM_H)
 
 lib_LTLIBRARIES         = libshcoll.la
 libshcoll_la_SOURCES    = $(SOURCES)
