--- a/man/man1/oshrun.1.in
+++ b/man/man1/oshrun.1.in
@@ -21,11 +21,21 @@ Run the program on N processing elements (PEs or processors).
 Overrides any PE count inherited from launch environment.
 .LP
 .SH ENVIRONMENT
-OpenSHMEM environment variables are prefixed with "SHMEM_".
 .LP
 If set, boolean flags are enabled with a non-zero numeric value, or
 "y", "yes", or "on"; disabled with zero numeric value, or "n", "no",
 or "off".
+.LP
+Controlling the launcher:
+.LP
+.RS 4
+.IP "OSHRUN_DEBUG (bool, default: false)"
+If set to true, oshrun outputs its progress of launching the
+application to standard error.
+.RE
+.\"
+.LP
+OpenSHMEM environment variables are prefixed with "SHMEM_".
 .LP
 Some older SHMEM implementations had variables prefixed with "SMA_":
 these are still supported in OpenSHMEM, but are deprecated.  If both
@@ -35,7 +45,7 @@ are set for a given variable, the "SHMEM_" one will be used.
 .RS 4
 .\"
 .LP
-Required by specification
+Required by specification:
 .RS 4
 .IP "SHMEM_VERSION, SMA_VERSION (bool: default false)"
 print library version at start-up
@@ -47,7 +57,7 @@ set the size of the symmetric heap.  Can use K,M,G,T units (2^10).
 enable run debugging/sanity checking (if configured).
 .RE
 .LP
-This implementation also has
+This implementation also has:
 .RS 4
 .IP "SHMEM_LOGGING (bool: default false)"
 enable message logging (if configured).
@@ -87,6 +97,7 @@ If we need extra progress for transports that don't provide it,
 activate progress threads on the named PEs, e.g. "0", "1-3", "2,4,6";
 or on all PEs if the variable's (case-insensitive) value is "y[es]" or
 "a[ll]".
+.RE
 .RS 4
 .IP "SHMEM_MEMERR_FATAL (bool, default: true)"
 If set to true, symmetric memory corruption or overflow is treated as
