Just a file rename to be consistent

--- a/src/shmemc/Makefile.am
+++ b/src/shmemc/Makefile.am
@@ -9,7 +9,7 @@ LIBSHMEMC_SOURCES         = \
 				contexts.c \
 				globalexit.c \
 				readenv.c \
-				shmemc_init.c \
+				init.c \
 				state.c
 
 #
