--- a/man/man1/oshrun.1.in
+++ b/man/man1/oshrun.1.in
@@ -4,7 +4,7 @@
 \fBoshrun\fP \- run an OpenSHMEM program
 .SH SYNOPSIS
 \fBoshrun | oshexec\fP
-.RS 4
+.RS 2
 .br
 [launcher pass-through arguments]
 .br
@@ -16,7 +16,7 @@ program [arguments...]
 \fBoshrun\fP, a.k.a. \fBoshexec\fP, runs an OpenSHMEM program on the
 given number of processing elements.
 .SH OPTIONS
-.IP "-n N | -np N" 4
+.IP "-n N | -np N" 2
 Run the program on N processing elements (PEs or processors).
 Overrides any PE count inherited from launch environment.
 .LP
@@ -28,7 +28,7 @@ or "off".
 .LP
 Controlling the launcher:
 .LP
-.RS 4
+.RS 2
 .IP "OSHRUN_DEBUG (bool, default: false)"
 If set to true, oshrun outputs its progress of launching the
 application to standard error.
@@ -42,11 +42,11 @@ these are still supported in OpenSHMEM, but are deprecated.  If both
 are set for a given variable, the "SHMEM_" one will be used.
 .LP
 .\"
-.RS 4
+.RS 2
 .\"
 .LP
 Required by specification:
-.RS 4
+.RS 2
 .IP "SHMEM_VERSION, SMA_VERSION (bool: default false)"
 print library version at start-up
 .IP "SHMEM_INFO, SMA_INFO (bool: default false)"
@@ -58,7 +58,7 @@ enable run debugging/sanity checking (if configured).
 .RE
 .LP
 This implementation also has:
-.RS 4
+.RS 2
 .IP "SHMEM_LOGGING (bool: default false)"
 enable message logging (if configured).
 .IP "SHMEM_LOGGING_EVENTS (string: default none)"
@@ -67,38 +67,28 @@ logging enabled, see above): fatal, init, finalize, memory, heaps,
 contexts, info, reductions, barriers, deprecate, locks, atomics; or
 "all".
 .RE
-.RS 4
+.RS 2
 .IP "SHMEM_LOGGING_FILE (string: default none)"
 filename to receive logging information.
 .RE
-.RS 4
-.IP "SHMEM_BARRIER_ALGO (string: default tree)"
-Algorithm name to use for barriers: currently one of "linear", "tree",
-"dissem" (dissemination).
-.RE
-.RS 4
-.IP "SHMEM_BROADCAST_ALGO (string: default tree)"
-Algorithm name to use for broadcasts: currently one of "linear",
-"tree", "dissem", "binomial", "binomial2".
-.RE
-.RS 4
+.RS 2
 .IP "SHMEM_PREALLOC_CTXS (integer: default 64)"
 How many OpenSHMEM context slots to preallocate at startup.
 .RE
-.RS 4
+.RS 2
 .IP "SHMEM_LAUNCHER (default: search)"
 Name of program to use for underlying launcher.  Default behavior is
 to search for PRRTE or a PMIx-aware MPI launcher.  Can also be set by
 configure.
 .RE
-.RS 4
+.RS 2
 .IP "SHMEM_PROGRESS_THREADS (default: unset)"
 If we need extra progress for transports that don't provide it,
 activate progress threads on the named PEs, e.g. "0", "1-3", "2,4,6";
 or on all PEs if the variable's (case-insensitive) value is "y[es]" or
 "a[ll]".
 .RE
-.RS 4
+.RS 2
 .IP "SHMEM_MEMERR_FATAL (bool, default: true)"
 If set to true, symmetric memory corruption or overflow is treated as
 a fatal condition, and the program exits.  If unset or false, the
@@ -106,18 +96,44 @@ issue will be logged (see SHMEM_LOGGING and
 SHMEM_LOGGING_EVENTS=memory above), but the program will try to
 continue, which will likely lead to undefined behavior.
 .RE
+.LP
+Collectives:
+.RS 2
+.IP "SHMEM_{BARRIER,BARRIER_ALL}__ALGO (string: binomial_tree)"
+Algorithm name to use for barriers.
+.RE
+.RS 2
+.IP "SHMEM_{SYNC,SYNC_ALL}__ALGO (string: default binomial_tree)"
+Algorithm name to use for syncs.
+.RE
+.RS 2
+.IP "SHMEM_BROADCAST_ALGO (string: default binomial_tree)"
+Algorithm name to use for broadcasts.
+.RE
+.RS 2
+.IP "SHMEM_COLLECT_ALGO (string: default bruck)"
+Algorithm name to use for collects.
+.RE
+.RS 2
+.IP "SHMEM_FCOLLECT_ALGO (string: default bruck_inplace)"
+Algorithm name to use for fixed collects.
+.RE
+.RS 2
+.IP "SHMEM_{ALLTOALL,ALLTOALLS}_ALGO (string: default color_pairwise_exchange_counter)"
+Algorithm name to use for alltoall/alltoalls.
+.RE
 .\"
 .RE
 .\"
 .SH EXAMPLES
 The command
 .LP
-.RS 4
+.RS 2
 $ oshrun -np 4 ./sping.x -e 8192
 .RE
 .LP
 runs the ping-pong code from
-.RS 4
+.RS 2
 .LP
 \f(CRhttps://github.com/openshmem-org/openshmem-examples\fP
 .RE
