Add sanity check for ASR
Add new log level for ASR (seems better to separate it)

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -75,6 +75,10 @@ endif
 MY_SOURCES            += collectives/shcoll-shim.c
 MY_SOURCES            += collectives/table.c
 
+if ENABLE_ALIGNED_ADDRESSES
+MY_SOURCES            += asr.c
+endif
+
 #
 # separate out the memory allocation routines
 #
