Start doing and moving put/signal into shmem_ namespace

--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -5,6 +5,7 @@ SHMEM_HDRS             =  \
 				shmem/defs_subst.h \
 				shmem/depr.h \
 				shmem/cache.h \
+				shmem/generics.h \
 				shmem/api.h \
 				shmem.h
 
